@@ -14,6 +14,9 @@ changes made.  See document footer for additional details.
 --- 2014-XX-XX  Release 7.26.XX                                    ---
 ----------------------------------------------------------------------
 
+* fixed crash in iges-g exporter - Ștefan Mirea
+* fixed corrupt output generated by iges-g exporter - Ștefan Mirea
+* improved behavior of MGED's draw command - Ștefan Mirea
 * enabled gqa libtie support using the LIBRT_BOT_MINTIE env variable
         - Ștefan Mirea
 * improved behavior of MGED's draw command - Ștefan Mirea
